# Kafka-Product-Service

./: README.md  compose.yaml
Products/: Dockerfile.dev  pyproject.toml
Products/products/: main.py  product.proto  settings.py
consumer-service/: Dockerfile.dev  pyproject.toml
consumer-service/consumer_service/: main.py  product_pb2.py  settings.py
