[tool.poetry]
name = "consumer-service"
version = "0.1.0"
description = ""
authors = ["Mohsin <msnsh12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiokafka = "^0.10.0"
sqlmodel = "^0.0.19"
fastapi = "^0.111.0"
asyncio = "^3.4.3"
protobuf = "^5.27.1"
psycopg = "^3.1.19"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
